--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -10,7 +10,7 @@
 <div class="container">
 <%= link_to('Login with Facebook', '/auth/facebook') %><br>
 <%= link_to "Login", login_path %><br>
-<%= link_to "Create Account", new_user_path %>
+<%= link_to "Signup", new_user_path %>
 </div>
 </div>
 
