--- a/app/views/photos/show.html.erb
+++ b/app/views/photos/show.html.erb
@@ -1,18 +1,26 @@
-<h1> <%= link_to @photo.profile.user.username?, profile_path(@photo.profile) %>'s Photo </h1>
-<% if @photo.album %>
-<h2>from <%= link_to @photo.album.name, profile_album_path(@profile, @photo.album) %>
-<%end%>
-<h3><strong>Pats: <p><%= @photo.pats.count %> <%= (@photo.pats.count) == 1 ? 'Pat' : 'Pats'%></p></strong></h3>
+<%= stylesheet_link_tag "photos" %>
+
+<div class="user-info-container">
+<div class="pats">
+<h1><strong>Pats: <p><%= @photo.pats.count %> <%= (@photo.pats.count) == 1 ? 'Pat' : 'Pats'%></p></strong></h1>
 <h4><%= photo_pats?(@photo) %></h4>
-<h2> Click me to give me a pat! </h2>
+<h2> Click my photo to give me a pat! </h2>
+</div>
 <%= link_to (cl_image_tag "#{@photo.image}"), photo_pats_path(@photo), :method => :post %>
 <br>
 <br>
 <% if @photo.profile_id == @user.profile.id %>
 <%= form_tag profile_photo_path(@profile, @photo), method: "delete" do %>
-  <%= submit_tag "Delete This Photo" %>
+  Psst, <%=@photo.profile.user.username?%>, click this button to <%= submit_tag "Delete This Photo" %>
 <% end %>
 <% end %>
+</div>
+
+
+<h3> <%= link_to @photo.profile.user.username?, profile_path(@photo.profile) %>'s Photo </h3>
+<% if @photo.album %>
+<h4>from album <%= link_to @photo.album.name, profile_album_path(@profile, @photo.album) %></h4>
+<%end%>
 
 <h2>Description:</h2> <h4><%= @photo.description %></h4>
 <br>
