--- a/app/assets/stylesheets/photos.scss
+++ b/app/assets/stylesheets/photos.scss
@@ -35,7 +35,7 @@
   }
 
 
-
+/*Photos Index & Photos New */
 /* Dropdown Button */
 .dropbtn {
   background-color: #4CAF50;
@@ -78,6 +78,8 @@
 /* Change the background color of the dropdown button when the dropdown content is shown */
 .dropdown:hover .dropbtn {background-color: #3e8e41;}
 
+
+/* Photos Show */
 .user-info-container {
   width: 70%;
   height: 70%;
@@ -86,6 +88,7 @@
   border-style: dotted;
   border-color: #b80404;
   text-align: center;
+  color: #009699;
 }
 
 .pats {
@@ -101,4 +104,145 @@
   border-width:5px;  
   border-style: dashed;
   border-color: #fc9e2b;
+  color: #f0a1b6;
+}
+
+.comments {
+  width: 70%;
+  height: 70%;
+  padding: 10px;
+  border-width:5px;  
+  border-style: solid;
+  border-color: #a8d408;
+  text-align: center;
+  color: #35b4db;
+}
+
+.user-info {
+  width: 70%;
+  height: 70%;
+  padding: 10px;
+  text-align: center;
+  display: inline-block;
+  border-width:5px;  
+  border-style: dashed;
+  border-color: #fc9e2b;
+  color: #f0a1b6;
+}
+
+/*Photos New*/ 
+
+
+.form-heading {
+  width: 70%;
+  height: 70%;
+  padding: 10px;
+  border-width:5px;  
+  border-style: solid;
+  border-color: #2196F3;
+  text-align: center;
+  color: #b80404;
+}
+
+.description {
+  width: 100%;
+  padding: 12px 20px;
+  margin: 8px 0;
+  display: inline-block;
+  border: 1px solid #ccc;
+  border-radius: 4px;
+  box-sizing: border-box;
+}
+input[type=text], select {
+  width: 100%;
+  padding: 12px 20px;
+  margin: 8px 0;
+  display: inline-block;
+  border: 1px solid #ccc;
+  border-radius: 4px;
+  box-sizing: border-box;
+}
+
+/* Style the submit button */
+input[type=submit] {
+  width: 100%;
+  background-color: #4CAF50;
+  color: white;
+  padding: 14px 20px;
+  margin: 8px 0;
+  border: none;
+  border-radius: 4px;
+  cursor: pointer;
+}
+
+/* Add a background color to the submit button on mouse-over */
+input[type=submit]:hover {
+  background-color: #45a049;
+}
+
+.checkbox-container {
+  display: block;
+  position: relative;
+  padding-left: 35px;
+  margin-bottom: 12px;
+  cursor: pointer;
+  font-size: 22px;
+  -webkit-user-select: none;
+  -moz-user-select: none;
+  -ms-user-select: none;
+  user-select: none;
+}
+
+/* Hide the browser's default checkbox */
+.checkbox-container input {
+  position: absolute;
+  opacity: 0;
+  cursor: pointer;
+  height: 0;
+  width: 0;
+}
+
+/* Create a custom checkbox */
+.checkmark {
+  position: absolute;
+  top: 0;
+  left: 0;
+  height: 25px;
+  width: 25px;
+  background-color: #eee;
+}
+
+/* On mouse-over, add a grey background color */
+.checkbox-container:hover input ~ .checkmark {
+  background-color: #ccc;
+}
+
+/* When the checkbox is checked, add a blue background */
+.checkbox-container input:checked ~ .checkmark {
+  background-color: #2196F3;
+}
+
+/* Create the checkmark/indicator (hidden when not checked) */
+.checkbox-checkmark:after {
+  content: "";
+  position: absolute;
+  display: none;
+}
+
+/* Show the checkmark when checked */
+.checkbox-container input:checked ~ .checkmark:after {
+  display: block;
+}
+
+/* Style the checkmark/indicator */
+.checkbox-container .checkmark:after {
+  left: 9px;
+  top: 5px;
+  width: 5px;
+  height: 10px;
+  border: solid white;
+  border-width: 0 3px 3px 0;
+  -webkit-transform: rotate(45deg);
+  -ms-transform: rotate(45deg);
+  transform: rotate(45deg);
 }
