--- a/app/views/photos/new.html.erb
+++ b/app/views/photos/new.html.erb
@@ -15,24 +15,39 @@
    </div>
  <% end %>
 
-
+<div class="form-heading">
 <h1> Add a Photo of Your Pup</h1>
+</div>
+<br>
 <%= form_for [@profile, @photo], url: profile_photos_path(@profile) do |f| %>
-    <%= f.label :image%>
+    <h4><%= f.label :image%></h4>
     <%= f.file_field :image %>
-        <br><br><br>
+        <br>
     <%= hidden_field_tag "photo[profile_id]", @profile.id %><br>
-    <%= f.label :description %><br>
-    <%= f.text_area :description %><br>
-    <%= f.label :categories %><br>
+   
+    <h4><%= f.label "Description:" %><br></h4>
+    <%= f.text_area :description, :class => 'description' %><br>
+    <br>
+    
+
+
+  <div class="dropdown">
+  <button onclick="myFunction()" class="dropbtn">Categories (Select as many as you want)</button>
+  <div id="myDropdown" class="dropdown-content">
     <%= f.collection_check_boxes(:category_ids, Category.where("name is not null and name != ''"), :id, :name) do |b| %>
-        <p>
+      <label class="checkbox-container">
         <%= b.check_box %>
         <%= b.label %>
-        </p>
+        <span class="checkmark"></span>
+        </label>
         <%end%> 
+      </div>
+    </div>
+    <br>
+    <br>
+
     <%= f.fields_for :categories do |category_builder| %>
-        <%= category_builder.label :add_a_new_category %>
+       <h4> <%= category_builder.label "And/or add a new category:" %></h4>
         <%= category_builder.text_field :name %>
         <%end%> 
             <br>
