--- a/app/assets/stylesheets/photos.scss
+++ b/app/assets/stylesheets/photos.scss
@@ -141,7 +141,7 @@
   border-style: solid;
   border-color: #2196F3;
   text-align: center;
-  color: #b80404;
+  color: #e80768;
 }
 
 .description {
