--- a/app/views/albums/new.html.erb
+++ b/app/views/albums/new.html.erb
@@ -1,37 +1,7 @@
-<%= stylesheet_link_tag "albums" %>
-<% if @album.errors.any? %>
-   <div class="error_explanation">
-   <div class="closebtn" onclick="this.parentElement.style.display='none';">&times;</div>
-     <h2>
-       <%= pluralize(@album.errors.count, "error") %>
-       prohibited this post from being saved:
-     </h2>
-  
-     <ul>
-     <% @album.errors.full_messages.each do |msg| %>
-       <li><%= msg %></li>
-     <% end %>
-     </ul>
-   </div>
- <% end %>  
-
 <div class="form-heading">
 <h1> Create a New Album </h1>
 </div>
 <br>
-<%= form_for [@profile, @album], url: profile_albums_path(@profile) do |f| %>
-        <%= f.label :name, "Album Name:" %><br>
-                <%= f.text_field :name %><br>
-        <%= f.label :description, "Description:" %><br>
-                <%= f.text_area :description, :class => 'description' %><br>
-            <%= hidden_field_tag "album[profile_id]", @profile.id %><br>
-        <%= f.label :add_existing_photos, "Add Existing Photos:" %><br>
-                <%= f.collection_check_boxes(:photo_ids, @profile.photos.where("album_id is null"), :id, :image) do |b| %>
-                <p>
-                <%= b.check_box + cl_image_tag(b.object.image.model.image.thumbnail)%>
-                </p>    
-            </div>
-        <%end%> 
-                <%= f.submit %>
-    <%end%>
+<%= render partial: 'album_form' %>
+
 
