--- a/app/views/photos/edit.html.erb
+++ b/app/views/photos/edit.html.erb
@@ -1,12 +1,11 @@
 <%= stylesheet_link_tag "photos" %>
 <div class="form-heading">
-<h1> Add a Photo of Your Pup</h1>
+<h1>Edit Photo</h1>
 </div>
 <br>
-<%= form_for [@profile, @photo], url: profile_photos_path(@profile) do |f| %>
-    <h4><%= f.label :image%></h4>
-    <%= f.file_field :image %>
-        <br>
+
+<%= cl_image_tag "#{@photo.image.thumbnail}"%>
+<%= form_for [@profile, @photo], url: profile_photo_path(@profile, @photo) do |f| %>
     <%= hidden_field_tag "photo[profile_id]", @profile.id %><br>
     <% if @album %>
     <%= hidden_field_tag "photo[album_id]", @album.id %>
@@ -38,5 +37,5 @@
         <%= category_builder.text_field :name %>
         <%end%> 
             <br>
-    <%= f.submit "Upload Image" %>
+    <%= f.submit "Edit Image" %>
     <%end%>
