--- a/app/assets/stylesheets/photos.scss
+++ b/app/assets/stylesheets/photos.scss
@@ -246,3 +246,14 @@ input[type=submit]:hover {
   -ms-transform: rotate(45deg);
   transform: rotate(45deg);
 }
+
+.photo-index-heading {
+  width: 100%;
+  height: 100%;
+  padding: 10px;
+  border-width:5px;  
+  border-style: solid;
+  border-color: #45a049;
+  text-align: center;
+  color: #f0a1b6;
+}
