--- a/app/assets/stylesheets/profiles.scss
+++ b/app/assets/stylesheets/profiles.scss
@@ -1,10 +1,3 @@
-.avatar {
-    vertical-align: middle;
-    width: 50px;
-    height: 50px;
-    border-radius: 50%;
-  }
-
   .error_explanation {
     position: relative;
     padding: 5px;
@@ -27,4 +20,46 @@
     right: 16px;
     color: red;
     font-weight: bold;
+  }
+
+  .center {
+    display: block;
+    margin-left: 290px;
+    margin-right: auto;
+    border-style: solid;
+    border-color: #fc9e2b;
+    border-width:5px; 
+    padding: 20px;
+  }
+
+  .user-head {
+    width: 70%;
+    height: 70%;
+    margin-left: 30px;
+    padding: 10px;
+    border-width:5px;  
+    border-style: solid;
+    border-color: #2196F3;
+    text-align: center;
+    color: #e80768;
+  }
+
+  .pats-count {
+    width: 70%;
+    height: 70%;
+    margin-left: 30px;
+    padding: 10px;
+    border-width:5px;  
+    border-style: dashed;
+    border-color: #4CAF50;
+    text-align: center;
+    color: #009699;
+  }
+
+  .profile-links {
+    width: 70%;
+    height: 70%;
+    margin-left: 30px;
+    padding: 10px;
+    text-align: center;
   }
