--- a/app/views/photos/index.html.erb
+++ b/app/views/photos/index.html.erb
@@ -1,15 +1,35 @@
 <%= stylesheet_link_tag "photos" %>
 
+<div class="photo-index-heading">
+<%if @profile %>
+<% if current_profile == @profile %>
+<h1>Your Photos:</h1>
+<% else %>
+<% user = User.find(@profile.user_id) %>
+<h1><%= link_to "#{user.username?}'s", profile_path(@profile)%> Photos</h1>
+<% end %>
+<%else%>
+<h1> Click on a dog to give them some pats! </h1>
+<% end %>
+</div>
+<br>
+
 <div class="dropdown">
   <button class="dropbtn">Sort By</button>
   <div class="dropdown-content">
+  <%if @profile %>
+  <%= link_to "Pats High to Low", profile_photos_path(@profile, sort_order: "high_to_low"), :method => "get" %> 
+  <%= link_to "Pats Low to High", profile_photos_path(@profile, sort_order: "low_to_high"), :method => "get"%> 
+  <%else%>
   <%= link_to "User", photos_path(sort_order: "user_sort"), :method => "get" %> 
   <%= link_to "Pats High to Low", photos_path(sort_order: "high_to_low"), :method => "get" %> 
   <%= link_to "Pats Low to High", photos_path(sort_order: "low_to_high"), :method => "get"%> 
+  <%end%>
   </div>
 </div>
 
-
+<br>
+<br>
 <% @photos.each_slice(4) do |photos| %>
   <div class="row">
   <% photos.each do |photo| %>
