create new album was adding random other photo

--- a/app/assets/stylesheets/photos.scss
+++ b/app/assets/stylesheets/photos.scss
@@ -86,7 +86,7 @@
   padding: 10px;
   border-width:5px;  
   border-style: dotted;
-  border-color: #b80404;
+  border-color: #e80768;
   text-align: center;
   color: #009699;
 }
@@ -104,7 +104,7 @@
   border-width:5px;  
   border-style: dashed;
   border-color: #fc9e2b;
-  color: #f0a1b6;
+  color: #b80404;
 }
 
 .comments {
